<resources>
    <string name="app_name">Animelis</string>
    <string name="anime_detail">Animes</string>
    <string name="movie_detail">Movies</string>
    <string name="action_settings">Settings</string>

    <!-- Anime list fragment title -->
    <string name="anime_fragment_title">Anime List</string>

    <!-- Tv show list fragment title -->
    <string name="tvshow_fragment_title">TV Show List</string>
    <!-- News fragment title -->
    <string name="news_fragment_title">News</string>

    <!-- Anime AmertDialog text -->
    <string name="add_new_anime">Create</string>

    <!-- AlertDialog Hints and Title -->
    <string name="item_title">Add a new item</string>
    <string name="item_name">Name of the item</string>
    <string name="url_or_site_name">Location of the item</string>
    <string name="add_category">Ajouter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_category_title">Ajouter une catégorie</string>
    <string name="category_name">Category name</string>
    <string name="dummy_text">Animes</string>
    <string name="dummy_date">Mon May 23 09:30:21</string>
    <string name="owner_name">anonymous</string>
</resources>
