<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/item_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_title"
        android:layout_margin="16dp"
        android:textSize="25sp"
        android:gravity="center"
        android:typeface="serif"/>

    <EditText
        android:id="@+id/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_name"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:typeface="serif" />

    <EditText
        android:id="@+id/url_or_site_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/url_or_site_name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:textAlignment="center"
        android:typeface="serif"/>

</LinearLayout>
